# staysure

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_models.ipynb  04_evaluation.ipynb
results/: runs.json
scripts/: train_and_save.py
